--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,100 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Android signing
+**/android/**/*.jks
+**/android/**/key.properties
+ios/Runner.xcodeproj/project.pbxproj
+ios/exportOptions.plist
+ios/build/Runner.xcarchive/Info.plist
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/AppFrameworkInfo.plist
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/AppIcon60x60@2x.png
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/AppIcon76x76@2x~ipad.png
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Assets.car
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/embedded.mobileprovision
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Info.plist
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/PkgInfo
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Runner
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Base.lproj/LaunchScreen.storyboardc/01J-lp-oVM-view-Ze5-6b-2t3.nib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Base.lproj/LaunchScreen.storyboardc/Info.plist
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Base.lproj/LaunchScreen.storyboardc/UIViewController-01J-lp-oVM.nib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Base.lproj/Main.storyboardc/BYZ-38-t0r-view-8bC-Xf-vdC.nib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Base.lproj/Main.storyboardc/Info.plist
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Base.lproj/Main.storyboardc/UIViewController-BYZ-38-t0r.nib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/libswiftCore.dylib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/libswiftCoreAudio.dylib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/libswiftCoreFoundation.dylib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/libswiftCoreGraphics.dylib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/libswiftCoreImage.dylib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/libswiftCoreMedia.dylib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/libswiftDarwin.dylib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/libswiftDispatch.dylib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/libswiftFoundation.dylib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/libswiftMetal.dylib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/libswiftObjectiveC.dylib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/libswiftos.dylib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/libswiftQuartzCore.dylib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/libswiftsimd.dylib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/libswiftUIKit.dylib
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/App.framework/App
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/App.framework/Info.plist
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/App.framework/_CodeSignature/CodeResources
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/App.framework/flutter_assets/AssetManifest.bin
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/App.framework/flutter_assets/AssetManifest.json
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/App.framework/flutter_assets/FontManifest.json
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/App.framework/flutter_assets/NativeAssetsManifest.json
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/App.framework/flutter_assets/NOTICES.Z
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/App.framework/flutter_assets/fonts/MaterialIcons-Regular.otf
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/App.framework/flutter_assets/packages/cupertino_icons/assets/CupertinoIcons.ttf
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/App.framework/flutter_assets/shaders/ink_sparkle.frag
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Flutter
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/icudtl.dat
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Info.plist
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/PrivacyInfo.xcprivacy
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Headers/Flutter.h
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Headers/FlutterAppDelegate.h
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Headers/FlutterBinaryMessenger.h
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Headers/FlutterCallbackCache.h
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Headers/FlutterChannels.h
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Headers/FlutterCodecs.h
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Headers/FlutterDartProject.h
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Headers/FlutterEngine.h
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Headers/FlutterEngineGroup.h
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Headers/FlutterHeadlessDartRunner.h
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Headers/FlutterHourFormat.h
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Headers/FlutterMacros.h
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Headers/FlutterPlatformViews.h
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Headers/FlutterPlugin.h
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Headers/FlutterPluginAppLifeCycleDelegate.h
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Headers/FlutterTexture.h
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Headers/FlutterViewController.h
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/Modules/module.modulemap
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/Frameworks/Flutter.framework/_CodeSignature/CodeResources
+ios/build/Runner.xcarchive/Products/Applications/Runner.app/_CodeSignature/CodeResources
+ios/build/Runner.xcarchive/SwiftSupport/iphoneos/libswiftCore.dylib
+ios/build/Runner.xcarchive/SwiftSupport/iphoneos/libswiftCoreAudio.dylib
+ios/build/Runner.xcarchive/SwiftSupport/iphoneos/libswiftCoreFoundation.dylib
+ios/build/Runner.xcarchive/SwiftSupport/iphoneos/libswiftCoreGraphics.dylib
+ios/build/Runner.xcarchive/SwiftSupport/iphoneos/libswiftCoreImage.dylib
+ios/build/Runner.xcarchive/SwiftSupport/iphoneos/libswiftCoreMedia.dylib
+ios/build/Runner.xcarchive/SwiftSupport/iphoneos/libswiftDarwin.dylib
+ios/build/Runner.xcarchive/SwiftSupport/iphoneos/libswiftDispatch.dylib
+ios/build/Runner.xcarchive/SwiftSupport/iphoneos/libswiftFoundation.dylib
+ios/build/Runner.xcarchive/SwiftSupport/iphoneos/libswiftMetal.dylib
+ios/build/Runner.xcarchive/SwiftSupport/iphoneos/libswiftObjectiveC.dylib
+ios/build/Runner.xcarchive/SwiftSupport/iphoneos/libswiftos.dylib
+ios/build/Runner.xcarchive/SwiftSupport/iphoneos/libswiftQuartzCore.dylib
+ios/build/Runner.xcarchive/SwiftSupport/iphoneos/libswiftsimd.dylib
+ios/build/Runner.xcarchive/SwiftSupport/iphoneos/libswiftUIKit.dylib
+ios/build/Runner.xcarchive/dSYMs/App.framework.dSYM/Contents/Resources/DWARF/App
+ios/build/Runner.xcarchive/dSYMs/Flutter.framework.dSYM/Contents/Info.plist
+ios/build/Runner.xcarchive/dSYMs/Flutter.framework.dSYM/Contents/Resources/DWARF/Flutter
+ios/build/Runner.xcarchive/dSYMs/Flutter.framework.dSYM/Contents/Resources/Relocations/aarch64/Flutter.yml
+ios/build/Runner.xcarchive/dSYMs/Runner.app.dSYM/Contents/Info.plist
+ios/build/Runner.xcarchive/dSYMs/Runner.app.dSYM/Contents/Resources/DWARF/Runner
+ios/build/Runner.xcarchive/dSYMs/Runner.app.dSYM/Contents/Resources/Relocations/aarch64/Runner.yml
+ios/build/ipa/DistributionSummary.plist
+ios/build/ipa/ExportOptions.plist
+ios/build/ipa/shwazi.ipa
+android/build/reports/problems/problems-report.html
